--- a/src/App.css
+++ b/src/App.css
@@ -7,6 +7,21 @@ main {
   font-family: system-ui;
 }
 
-img {
-  max-width: 100%;
+section {
+  display: flex;
+  justify-content: space-between;
+  align-items: start;
+  gap: 1rem;
 }
+
+article {
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
+}
+
+article img {
+  max-width: 320px;
+  height: auto;
+}
+
